...
                            borderRadius: BorderRadius.circular(4.0)),
                        color: Colors.white,
                        child: Padding(
                          padding: EdgeInsets.symmetric(
                              horizontal: 15.0, vertical: 10.0),
                          child: TextFormField(
                            key: Key('text'),
                            focusNode: NoKeyboardEditableTextFocusNode(),
                            autofocus: true,
                            controller: _textFieldController,
                            validator: TextFieldValidator.validate,
                            style: kTextField,
                            maxLines: 5,
...
                    child: Text(
                      'Start Date',
                      style: kTitleStyle,
                    ),
                  ),
                  InkWell(
                    key: Key('startDate'),
                    onTap: () async {
                      final DateTime due = await showDatePicker(
                        context: context,
                        firstDate: DateTime(
                          widget.today.year,
                          widget.today.month,
...
                    child: Text(
                      'Estimate End Date',
                      style: kTitleStyle,
                    ),
                  ),
                  InkWell(
                    key: Key('endDate'),
                    onTap: () async {
                      final DateTime due = await showDatePicker(
                        context: context,
                        firstDate: DateTime(
                          widget.today.year,
                          widget.today.month,
...
                ],
              ),
            ),
          ),
        ),
        bottomNavigationBar: InkWell(
          key: Key('create'),
          onTap: () async {
            if (validateAndSave()) {
              try {
                if (widget.task == null) {
                  await widget.db.taskDao.insertTask(
                    TasksCompanion(
...
