...
                        onDismissed: (direction) async {
                          await _db.taskDao.deleteTask(snapshot.data[index]);
                          Scaffold.of(context).showSnackBar(SnackBar(
                            content: Text("Deleted"),
                            duration: Duration(seconds: 5),
                            action: SnackBarAction(
                              label: "Undo",
                              onPressed: () async {
                                await _db.taskDao.insertTask(
                                  snapshot.data[index].copyWith(),
                                );
                              },
                            ),
                          ));
                        },
                        child: Padding(
                          padding: EdgeInsets.symmetric(
                              vertical: 10.0, horizontal: 10.0),
                          child: GestureDetector(
                            key: Key('card'),
                            child: Card(
                              elevation: 8.0,
                              shadowColor: Colors.grey,
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(15.0),
                              ),
...
